Some work at decoupling the programs from each other.  Adopting directory structure similar to TIPsort codes.

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,4 @@
-analyze_mca
-add_mca
-add_tree
-contract_mca
-sum_mca
-mca2txt
-txt2mca
-txt2binnedavgtxt
-tree2mca
-treelist2mca
-tree2mca_gated
-tree2binnedavgtxt
-tree2tree
-tree_gate_intensity
-chn2mca
-spe2mca
-spx2mca
-list
+bin/*
 *.mca
 *.spe
 *.spx
