Major reorganization and seperation of codes (so that they are independent and don't depend on a mishmash of common header files).

--- a/contract_mca/Makefile
+++ b/contract_mca/Makefile
@@ -1,4 +1,4 @@
 CFLAGS = -O -Wall -fPIC -ansi
 
-all: contract_mca.c mca.h common.h
+all: contract_mca.c contract_mca.h
 	g++ contract_mca.c $(CFLAGS) -o ../bin/contract_mca
