--- a/sum_mca/Makefile
+++ b/sum_mca/Makefile
@@ -1,4 +1,4 @@
 CFLAGS = -O -Wall -fPIC -ansi
 
-all: sum_mca.c mca.h common.h
+all: sum_mca.c sum_mca.h
 	g++ sum_mca.c $(CFLAGS) -o ../bin/sum_mca
