--- a/analyze_mca/Makefile
+++ b/analyze_mca/Makefile
@@ -1,4 +1,4 @@
 CFLAGS = -O -Wall -fPIC -ansi
 
-all: analyze_mca.c mca.h common.h
+all: analyze_mca.c analyze_mca.h
 	g++ analyze_mca.c $(CFLAGS) -o ../bin/analyze_mca
