--- a/mca2txt/Makefile
+++ b/mca2txt/Makefile
@@ -1,4 +1,4 @@
 CFLAGS = -O -Wall -fPIC -ansi
 
-all: mca2txt.c mca.h common.h
+all: mca2txt.c mca2txt.h
 	g++ mca2txt.c $(CFLAGS) -o ../bin/mca2txt
