--- a/tree2mca_gated/Makefile
+++ b/tree2mca_gated/Makefile
@@ -1,5 +1,5 @@
 CFLAGS = -O -Wall -fPIC -ansi
 ROOT = $(shell $(ROOTSYS)/bin/root-config --glibs) $(shell $(ROOTSYS)/bin/root-config --cflags)
 
-all: tree2mca_gated.c tree2mca.h read_config.c common.h
+all: tree2mca_gated.c tree2mca_gated.h read_config.c
 	g++ tree2mca_gated.c $(CFLAGS) $(ROOT) -o ../bin/tree2mca_gated
