--- a/tree_gate_intensity/Makefile
+++ b/tree_gate_intensity/Makefile
@@ -1,5 +1,5 @@
 CFLAGS = -O -Wall -fPIC -ansi
 ROOT = $(shell $(ROOTSYS)/bin/root-config --glibs) $(shell $(ROOTSYS)/bin/root-config --cflags)
 
-all: tree_gate_intensity.c tree2tree.h read_config.c common.h
+all: tree_gate_intensity.c tree_gate_intensity.h read_config.c
 	g++ tree_gate_intensity.c $(CFLAGS) $(ROOT) -o ../bin/tree_gate_intensity
