--- a/txt2binnedavgtxt/Makefile
+++ b/txt2binnedavgtxt/Makefile
@@ -1,4 +1,4 @@
 CFLAGS = -O -Wall -fPIC -ansi
 
-all: txt2binnedavgtxt.c txt2binnedavgtxt.h read_config.c common.h
+all: txt2binnedavgtxt.c txt2binnedavgtxt.h read_config.c
 	g++ txt2binnedavgtxt.c $(CFLAGS) -o ../bin/txt2binnedavgtxt
