--- a/txt2mca/Makefile
+++ b/txt2mca/Makefile
@@ -1,4 +1,4 @@
 CFLAGS = -O -Wall -fPIC -ansi
 
-all: txt2mca.c mca.h read_config.c common.h
+all: txt2mca.c txt2mca.h read_config.c
 	g++ txt2mca.c $(CFLAGS) -o ../bin/txt2mca
